--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html {
 
 
 body {
-  background: url(../img/obg.webp) ;
+  background: url(../img/bg.webp) ;
   position: relative;
   padding: 50px 0 100px;
   background-position: center center;
